use virtblocks in the QEMU driver

--- a/src/qemu/Makefile.inc.am
+++ b/src/qemu/Makefile.inc.am
@@ -94,6 +94,7 @@ libvirt_driver_qemu_impl_la_CFLAGS = \
 	$(LIBNL_CFLAGS) \
 	$(SELINUX_CFLAGS) \
 	$(XDR_CFLAGS) \
+	$(VIRTBLOCKS_CFLAGS) \
 	-I$(srcdir)/access \
 	-I$(srcdir)/conf \
 	-I$(srcdir)/secret \
@@ -106,8 +107,12 @@ libvirt_driver_qemu_impl_la_LIBADD = \
 	$(LIBNL_LIBS) \
 	$(SELINUX_LIBS) \
 	$(LIBXML_LIBS) \
+	libvirt_rust.la \
 	$(NULL)
-libvirt_driver_qemu_impl_la_SOURCES = $(QEMU_DRIVER_SOURCES)
+libvirt_driver_qemu_impl_la_SOURCES = \
+	$(QEMU_DRIVER_SOURCES) \
+	$(VIRTBLOCKS_INCLUDEFILES) \
+	$(NULL)
 
 if WITH_DTRACE_PROBES
 libvirt_driver_qemu_la_LIBADD += libvirt_qemu_probes.lo
