use virtblocks in the QEMU driver

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -130,6 +130,10 @@ include secret/Makefile.inc.am
 include storage/Makefile.inc.am
 include remote/Makefile.inc.am
 
+include rust/Makefile.def.inc.am
+include rust/Makefile.build.inc.am
+clean-local: rust-clean-local
+
 
 THREAD_LIBS = $(LIB_PTHREAD) $(LTLIBMULTITHREAD)
 
