--- a/configure.ac
+++ b/configure.ac
@@ -511,6 +511,7 @@ LIBVIRT_ARG_LOGIN_SHELL
 LIBVIRT_ARG_HOST_VALIDATE
 LIBVIRT_ARG_TLS_PRIORITY
 LIBVIRT_ARG_SYSCTL_CONFIG
+LIBVIRT_ARG_VIRTBLOCKS
 
 
 LIBVIRT_CHECK_DEBUG
@@ -525,6 +526,7 @@ LIBVIRT_CHECK_HOST_VALIDATE
 LIBVIRT_CHECK_TLS_PRIORITY
 LIBVIRT_CHECK_SYSCTL_CONFIG
 LIBVIRT_CHECK_NSS
+LIBVIRT_CHECK_VIRTBLOCKS
 
 
 
@@ -1068,6 +1070,7 @@ LIBVIRT_RESULT_LOADER_NVRAM
 LIBVIRT_RESULT_LOGIN_SHELL
 LIBVIRT_RESULT_HOST_VALIDATE
 LIBVIRT_RESULT_TLS_PRIORITY
+LIBVIRT_RESULT_VIRTBLOCKS
 AC_MSG_NOTICE([])
 AC_MSG_NOTICE([Developer Tools])
 AC_MSG_NOTICE([])
