--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1017,6 +1017,7 @@ endif WITH_VIRTBLOCKS_RUST
 
 if WITH_VIRTBLOCKS_GOLANG
 virtblockstest_LDADD += \
+	$(VIRTBLOCKS_LIBS) \
 	../src/libvirt_golang.la \
 	$(NULL)
 endif WITH_VIRTBLOCKS_GOLANG
