golang: Use Virt Blocks in QEMU driver
With this, the Go implementation has basically reached
feature parity with the Rust one.

--- a/src/qemu/Makefile.inc.am
+++ b/src/qemu/Makefile.inc.am
@@ -106,6 +106,12 @@ libvirt_driver_qemu_impl_la_LIBADD += \
 	$(NULL)
 endif WITH_VIRTBLOCKS_RUST
 
+if WITH_VIRTBLOCKS_GOLANG
+libvirt_driver_qemu_impl_la_LIBADD += \
+	libvirt_golang.la \
+	$(NULL)
+endif WITH_VIRTBLOCKS_GOLANG
+
 libvirt_driver_qemu_impl_la_CFLAGS += \
 	$(VIRTBLOCKS_CFLAGS) \
 	$(NULL)
