--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -132,6 +132,7 @@ include storage/Makefile.inc.am
 include remote/Makefile.inc.am
 
 
+VIRTBLOCKS_PHONY_TARGETS =
 VIRTBLOCKS_CLEAN_TARGETS =
 
 if WITH_VIRTBLOCKS
@@ -149,6 +150,7 @@ endif WITH_VIRTBLOCKS_GOLANG
 endif WITH_VIRTBLOCKS
 
 clean-local: $(VIRTBLOCKS_CLEAN_TARGETS)
+.PHONY: $(VIRTBLOCKS_PHONY_TARGETS)
 
 
 THREAD_LIBS = $(LIB_PTHREAD) $(LTLIBMULTITHREAD)
