virtblocks: Unify glue code into one directory and library
By doing that we also get cleaner and nicer Makefiles.

Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/src/qemu/Makefile.inc.am
+++ b/src/qemu/Makefile.inc.am
@@ -112,18 +112,9 @@ libvirt_driver_qemu_impl_la_SOURCES = \
 	$(NULL)
 
 if WITH_VIRTBLOCKS
-
-if WITH_VIRTBLOCKS_RUST
 libvirt_driver_qemu_impl_la_LIBADD += \
-	libvirt_rust.la \
+	libvirt_virtblocks_glue.la \
 	$(NULL)
-endif WITH_VIRTBLOCKS_RUST
-
-if WITH_VIRTBLOCKS_GOLANG
-libvirt_driver_qemu_impl_la_LIBADD += \
-	libvirt_golang.la \
-	$(NULL)
-endif WITH_VIRTBLOCKS_GOLANG
 
 libvirt_driver_qemu_impl_la_CFLAGS += \
 	$(VIRTBLOCKS_CFLAGS) \
