--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ addons:
       - ccache
       - golang
       - rpcgen
-      - rust
       - xz
       - yajl
       - glib
@@ -22,51 +21,38 @@ matrix:
     - services:
         - docker
       env:
-        - IMAGE="ubuntu-18"
-        - VIRTBLOCKS="rust"
+        - IMAGE="debian-10"
         - MAKE_ARGS="syntax-check check"
       script:
-        - make -C ci/ ci-build@$IMAGE CI_CONFIGURE_ARGS="--with-virtblocks=$VIRTBLOCKS" CI_MAKE_ARGS="$MAKE_ARGS"
+        - make -C ci/ ci-build@$IMAGE CI_CONFIGURE_ARGS="--with-virtblocks" CI_MAKE_ARGS="$MAKE_ARGS"
     - services:
         - docker
       env:
         - IMAGE="ubuntu-18"
-        - VIRTBLOCKS="go"
         - MAKE_ARGS="syntax-check check"
       script:
-        - make -C ci/ ci-build@$IMAGE CI_CONFIGURE_ARGS="--with-virtblocks=$VIRTBLOCKS" CI_MAKE_ARGS="$MAKE_ARGS"
+        - make -C ci/ ci-build@$IMAGE CI_CONFIGURE_ARGS="--with-virtblocks" CI_MAKE_ARGS="$MAKE_ARGS"
     - services:
         - docker
       env:
         - IMAGE="fedora-30"
-        - VIRTBLOCKS="rust"
         - MAKE_ARGS="syntax-check check"
       script:
-        - make -C ci/ ci-build@$IMAGE CI_CONFIGURE_ARGS="--with-virtblocks=$VIRTBLOCKS" CI_MAKE_ARGS="$MAKE_ARGS"
+        - make -C ci/ ci-build@$IMAGE CI_CONFIGURE_ARGS="--with-virtblocks" CI_MAKE_ARGS="$MAKE_ARGS"
     - services:
         - docker
       env:
-        - IMAGE="fedora-30"
-        - VIRTBLOCKS="go"
+        - IMAGE="centos-7"
         - MAKE_ARGS="syntax-check check"
       script:
-        - make -C ci/ ci-build@$IMAGE CI_CONFIGURE_ARGS="--with-virtblocks=$VIRTBLOCKS" CI_MAKE_ARGS="$MAKE_ARGS"
+        - make -C ci/ ci-build@$IMAGE CI_CONFIGURE_ARGS="--with-virtblocks" CI_MAKE_ARGS="$MAKE_ARGS"
     - compiler: clang
       language: c
       os: osx
       env:
-        - VIRTBLOCKS="rust"
         - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:$PATH"
       script:
-        - ./autogen.sh --prefix=$(pwd)/install-root --with-virtblocks=$VIRTBLOCKS && make -j3 && make -j3 install
-    - compiler: clang
-      language: c
-      os: osx
-      env:
-        - VIRTBLOCKS="go"
-        - PATH="/usr/local/opt/gettext/bin:/usr/local/opt/ccache/libexec:/usr/local/opt/rpcgen/bin:$PATH"
-      script:
-        - ./autogen.sh --prefix=$(pwd)/install-root --with-virtblocks=$VIRTBLOCKS && make -j3 && make -j3 install
+        - ./autogen.sh --prefix=$(pwd)/install-root --with-virtblocks && make -j3 && make -j3 install
 
 git:
   submodules: true
