virtblocks_glue: Link against GLib
This is now necessary since libvirt itself uses GLib

--- a/src/virtblocks_glue/Makefile.build.inc.am
+++ b/src/virtblocks_glue/Makefile.build.inc.am
@@ -22,10 +22,12 @@ libvirt_virtblocks_glue_la_SOURCES += \
 
 libvirt_virtblocks_glue_la_CFLAGS = \
 	$(VIRTBLOCKS_CFLAGS) \
+	$(GLIB_CFLAGS) \
 	$(LIBXML_CFLAGS) \
 	$(NULL)
 libvirt_virtblocks_glue_la_LIBADD = \
 	$(VIRTBLOCKS_LIBS) \
+	$(GLIB_LIBS) \
 	$(NULL)
 
 VIRTBLOCKS_PHONY_TARGETS += \
